[package]
name = "yamablog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yamablog"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0", features = ["serde"] }
# コマンドライン解析
clap = { version = "4", features = ["derive"] }
# Markdown -> HTML
pulldown-cmark = "0"
regress = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
uuid = { version = "1", features = ["serde"] }
polyline = "0"
gpx = "0"
geo-types = "0"
rayon = "1"

[build-dependencies]
typify = "0"
schemars = "0"
serde_json = "1"
prettyplease = "0"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
